<resources>
    <string name="app_name">answer:</string>
    <string name="search">请输入关键字：</string>
    <string name="btn_search">查询</string>
    <string name="action_settings">Settings</string>
    <string name="hello">0</string>
    <string name="nodata">No Data</string>
    <string name="btn_label2">+2 POINTS</string>
    <string name="btn_label1">+1 POINTS</string>
    <string name="btn_label3">+3 POINTS</string>
    <string name="btn_label4">RESET</string>
    <string name="textview">TeamA</string>
    <string name="textviewb">TeamB</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="rmb_hint">input RMB</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="btn_opencfg_label">config</string>
    <string name="btn_save_label">Save</string>
    <string name="menu_set_label">Setting</string>
    <string name="label_open_list">OpenList</string>
</resources>
